Translations added/updated for spanish, persian, japanese, korean, brasilian and chinese
(Old svn revision: 3960)

--- a/po/fa_IR.po
+++ b/po/fa_IR.po
@@ -1,32 +1,33 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# translation of xfce4-panel.po to Persian
+# Persian translation of PACKAGE.
+# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <edscott@imp.mx>, 2003.
+# Abbas Izad <abbasizad@hotmail.com>, 2003.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: xfce4-panel\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: 2004-01-13 00:00+0100\n"
-"Last-Translator: Jaime Buffery <nestu@lunar-linux.org>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2003-12-26 17:56+0330\n"
+"Last-Translator: Abbas Izad <abbasizad@hotmail.com>\n"
+"Language-Team: Persian <fa@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.0.2\n"
 
 #: panel/xfce_support.c:597
 msgid "Select file"
-msgstr "Seleccionar archivo"
+msgstr "انتخاب کردن پرونده"
 
 #: panel/controls_dialog.c:254
 msgid "Change item"
-msgstr "Cambiar elemento"
+msgstr "تغییر دادن آیتم"
 
 #: panel/controls_dialog.c:286 panel/item_dialog.c:681
 msgid "Position:"
-msgstr "Posición"
+msgstr "موقعیت:"
 
 #: panel/controls_dialog.c:342 panel/controls.c:272
 msgid ""
@@ -34,90 +35,90 @@ msgid ""
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Quitar un elemento también quitará su menú emergente.\n"
+"برداشتن آیتمی فهرست واشوی آن را نیز برخواهد داشت.\n"
 "\n"
-"Desea quitar el elemento?"
+"آیا می‌خواهید آیتم را بردارید؟"
 
 #: panel/item_dialog.c:321
 msgid "Other Icon"
-msgstr "Otro Icono"
+msgstr "شمایل دیگر"
 
 #: panel/item_dialog.c:346
 msgid "Select icon"
-msgstr "Seleccionar icono"
+msgstr "انتخاب کردن شمایل"
 
 #: panel/item_dialog.c:396
 msgid "Icon:"
-msgstr "Icono:"
+msgstr "شمایل:"
 
 #: panel/item_dialog.c:467
 msgid "Select command"
-msgstr "Seleccionar comando"
+msgstr "انتخاب کردن فرمان"
 
 #: panel/item_dialog.c:495
 msgid "Command:"
-msgstr "Comando:"
+msgstr "فرمان:"
 
 #: panel/item_dialog.c:532 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
-msgstr "Ejecutar en _terminal"
+msgstr "اجرا شدن در _پایانه"
 
 #: panel/item_dialog.c:537 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr "Usar notificación de arranque"
+msgstr "استفاده کردن از یادآوری ـ‌آغازین"
 
 #: panel/item_dialog.c:564
 msgid "Caption:"
-msgstr "Captura"
+msgstr "عنوان:"
 
 #: panel/item_dialog.c:597
 msgid "Tooltip:"
-msgstr "Etiqueta explicativa"
+msgstr "راهنمای‌ابزار:"
 
 #: panel/item_dialog.c:633
 msgid "Menu:"
-msgstr "Menú:"
+msgstr "فهرست:"
 
 #: panel/item_dialog.c:640
 msgid "Attach menu to launcher"
-msgstr "Anexarle un menú al lanzador"
+msgstr "پیوست فهرست به پرتابگر"
 
 #: panel/item_dialog.c:773
 msgid "Icon Preview"
-msgstr "Vista preliminar del icono"
+msgstr "پیش‌نمای شمایل"
 
 #: panel/item_dialog.c:777
 msgid "Drag file onto this frame to change the icon"
-msgstr "Arrastre el fichero a este marco para cambiar el icono"
+msgstr "پرونده را برای تغییر شمایل بر روی این قاب بکشانید"
 
 #: panel/item_dialog.c:965
 msgid "Change menu item"
-msgstr "Cambiar elemento del menú"
+msgstr "تغییر دادن آیتم فهرست"
 
 #. add buttons
 #: panel/item_dialog.c:968
 msgid "Remove"
-msgstr "Borrar"
+msgstr "برداشتن"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "Pinche el botón 3 del ratón para cambiar elemento"
+msgstr "دکمه‌ی سوم موشی را برای تغییر دادن آیتم کلیک کنید"
 
 #: panel/item.c:464
 msgid "Add launcher"
-msgstr "Añadir lanzador"
+msgstr "افزودن پرتابگر"
 
 #: panel/item.c:469
 msgid "Add new item"
-msgstr "Añadir nuevo elemento"
+msgstr "افزودن آیتم جدید"
 
 #: panel/item.c:601
 msgid "Launcher"
-msgstr "Lanzador"
+msgstr "پرتابگر"
 
 #: panel/main.c:117
 msgid "Are you sure you want to exit?"
-msgstr "¿Está seguro de querer salir?"
+msgstr "آیا مطمئن هستید که می‌خواهید خارج شوید؟"
 
 #: panel/main.c:329
 #, c-format
@@ -126,8 +127,8 @@ msgid ""
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
-"%s, versión %s\n"
-"Parte del Entorno de Escritorio XFce\n"
+"%s, نسخه %s\n"
+"بخشی از محیط رومیزی Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
@@ -136,216 +137,215 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Su gestor de ventanas no parece que soporte las nuevas funcionalidades como "
-"se definen en http://www.freedesktop.org. \n"
-"Algunas características puede que no funcionen adecuadamente."
+"مدیر پنجره‌ی شما بنظر نمی‌رسد که از سرنخ‌های مدیر پنجره‌ی جدید همانطور که "
+"در http://www.freedesktop.org تعریف شده پشتیبانی کند. \n"
+"بعضی از قابلیت‌های XFce ممکن است آنطور که باید کار نکنند."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
-msgstr "/Añadir nuevo elemento"
+msgstr "/افزودن آیتم ـجدید"
 
 #: panel/controls.c:322 panel/panel.c:414
 msgid "/_Properties..."
-msgstr "/_Propiedades..."
+msgstr "/ـ‌مشخصات..."
 
 #: panel/controls.c:323
 msgid "/_Remove"
-msgstr "/_Borrar"
+msgstr "/ـ‌برداشتن"
 
 #: panel/controls.c:655
 msgid "This item has no configuration options"
-msgstr "Este elemento no tiene opciones de configuración"
+msgstr "این آیتم هیچ گزینه‌های تنظیمی ندارد"
 
 #: panel/panel.c:410
 msgid "/XFce Panel"
-msgstr "/Panel XFce"
+msgstr "/تابلوی XFce"
 
 #: panel/panel.c:415
 msgid "/_About XFce"
-msgstr "/_Acerca de XFce"
+msgstr "/ـ‌درباره‌ی XFce"
 
 #: panel/panel.c:416
 msgid "/_Help"
-msgstr "/Ayuda"
+msgstr "/ـراهنما"
 
 #: panel/panel.c:419
 msgid "/_Settings manager"
-msgstr "/Administrador de configuración"
+msgstr "/ـ‌مدیر تنظیمات"
 
 #: panel/panel.c:422
 msgid "/_Lock screen"
-msgstr "/B_Loquear pantalla"
+msgstr "/ـ‌قفل کردن صفحه"
 
 #: panel/panel.c:423
-#, fuzzy
 msgid "/_Restart"
-msgstr "_Deshacer"
+msgstr "/ـراه‌اندازی مجدد"
 
 #: panel/panel.c:425
 msgid "/E_xit"
-msgstr "/Salir"
+msgstr "/ـ‌خروج"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
 msgid "XFce Panel"
-msgstr "Panel XFce"
+msgstr "تابلوی XFce"
 
 #: panel/icons.c:73
 msgid "Default"
-msgstr "Por defecto"
+msgstr "پیش‌فرض"
 
 #: panel/icons.c:74
 msgid "Editor"
-msgstr "Editor"
+msgstr "ویرایشگر"
 
 #: panel/icons.c:75
 msgid "File management"
-msgstr "Administración de archivos"
+msgstr "مدیریت پرونده"
 
 #: panel/icons.c:76
 msgid "Utilities"
-msgstr "Utilidades"
+msgstr "وسایل"
 
 #: panel/icons.c:77
 msgid "Games"
-msgstr "Juegos"
+msgstr "بازی‌ها"
 
 #: panel/icons.c:78
 msgid "Help browser"
-msgstr "Navegador de ayuda"
+msgstr "مرورگر راهنما"
 
 #: panel/icons.c:79
 msgid "Multimedia"
-msgstr "Multimedia"
+msgstr "چندرسانه‌ای"
 
 #: panel/icons.c:80
 msgid "Network"
-msgstr "Red"
+msgstr "شبکه"
 
 #: panel/icons.c:81
 msgid "Graphics"
-msgstr "Gráficos"
+msgstr "گرافیک"
 
 #: panel/icons.c:82
 msgid "Printer"
-msgstr "Impresora"
+msgstr "چاپگر"
 
 #: panel/icons.c:83
 msgid "Productivity"
-msgstr "Productividad"
+msgstr "سازنده‌گی"
 
 #: panel/icons.c:84
 msgid "Sound"
-msgstr "Sonido"
+msgstr "صوت"
 
 #: panel/icons.c:85
 msgid "Terminal"
-msgstr "Terminal"
+msgstr "پایانه"
 
 #: panel/mcs_client.c:208
 msgid "Settings manager not available"
-msgstr "Administrador de sesión no está disponible"
+msgstr "مدیر تنظیمات در دسترس نیست"
 
 #: panel/popup.c:261
 msgid "Menu"
-msgstr "Menú"
+msgstr "فهرست"
 
 #: settings/xfce_settings_dialog.c:119
 msgid "Tiny"
-msgstr "Pequeñito"
+msgstr "کوچولو"
 
 #: settings/xfce_settings_dialog.c:123
 msgid "Small"
-msgstr "Pequeño"
+msgstr "کوچک"
 
 #: settings/xfce_settings_dialog.c:127
 msgid "Medium"
-msgstr "Mediano"
+msgstr "متوسط"
 
 #: settings/xfce_settings_dialog.c:131
 msgid "Large"
-msgstr "Grande"
+msgstr "بزرگ"
 
 #: settings/xfce_settings_dialog.c:190
 msgid "Horizontal"
-msgstr "Horizontal"
+msgstr "افقی"
 
 #: settings/xfce_settings_dialog.c:194
 msgid "Vertical"
-msgstr "Vertical"
+msgstr "عمودی"
 
 #: settings/xfce_settings_dialog.c:226 settings/xfce_settings_dialog.c:456
 msgid "Left"
-msgstr "Izquierda"
+msgstr "چپ"
 
 #: settings/xfce_settings_dialog.c:230 settings/xfce_settings_dialog.c:457
 msgid "Right"
-msgstr "Derecha"
+msgstr "راست"
 
 #: settings/xfce_settings_dialog.c:234 settings/xfce_settings_dialog.c:455
 #: settings/xfce_settings_dialog.c:511
 msgid "Top"
-msgstr "Arriba"
+msgstr "بالا"
 
 #: settings/xfce_settings_dialog.c:238 settings/xfce_settings_dialog.c:454
 #: settings/xfce_settings_dialog.c:519
 msgid "Bottom"
-msgstr "Abajo"
+msgstr "پایین"
 
 #: settings/xfce_settings_dialog.c:374
 msgid "Panel size:"
-msgstr "Tamaño del panel:"
+msgstr "اندازه‌ی تابلو:"
 
 #: settings/xfce_settings_dialog.c:390
 msgid "Panel orientation:"
-msgstr "Orientación del panel:"
+msgstr "جهت تابلو:"
 
 #: settings/xfce_settings_dialog.c:407
 msgid "Popup position:"
-msgstr "Posición del menú emergente:"
+msgstr "موقعیت واشو:"
 
 #: settings/xfce_settings_dialog.c:424
 msgid "Icon theme:"
-msgstr "Tema de los iconos:"
+msgstr "تم شمایل:"
 
 #: settings/xfce_settings_dialog.c:495
 msgid "Panel layer:"
-msgstr "Nivel del panel:"
+msgstr "لایه‌ی تابلو:"
 
 #: settings/xfce_settings_dialog.c:515
 msgid "Normal"
-msgstr "Normal"
+msgstr "عادی"
 
 #: settings/xfce_settings_dialog.c:535
 msgid "Center the panel:"
-msgstr "Centrar el panel:"
+msgstr "مرکزی کردن تابلو:"
 
 #: settings/xfce_settings_dialog.c:559
 msgid "Set"
-msgstr "Configurar"
+msgstr "تعیین کردن"
 
 #: settings/xfce_settings_dialog.c:595
 msgid "Autohide:"
-msgstr "Ocultar automáticamente"
+msgstr "پنهان‌سازی خودکار:"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
-msgstr "Configuración del panel de XFce"
+msgstr "تنظیمات تابلوی XFce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
 msgid "Appearance"
-msgstr "Apariencia"
+msgstr "ظاهر"
 
 #. Position
 #: settings/xfce_settings_dialog.c:696
 msgid "Position"
-msgstr "Posición"
+msgstr "موقعیت"
 
 #. autohide
 #: settings/xfce_settings_dialog.c:712
 msgid "Behaviour"
-msgstr "Comportamiento"
+msgstr "رفتار"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -357,19 +357,19 @@ msgstr "Comportamiento"
 #.
 #: plugins/clock/clock.c:119
 msgid "%A, %-d %B %Y"
-msgstr ""
+msgstr "%A, %-d %B %Y"
 
 #: plugins/clock/clock.c:336
 msgid "Clock type:"
-msgstr "Tipo de reloj:"
+msgstr "نوع ساعت:"
 
 #: plugins/clock/clock.c:349
 msgid "Analog"
-msgstr "Analógico"
+msgstr "آنالوگ"
 
 #: plugins/clock/clock.c:353
 msgid "Digital"
-msgstr "Digital"
+msgstr "ارقامی"
 
 #: plugins/clock/clock.c:357
 msgid "LED"
@@ -377,36 +377,35 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:419
 msgid "Hour mode:"
-msgstr "Modo Horario"
+msgstr "حالت ساعت:"
 
 #: plugins/clock/clock.c:426
-#, fuzzy
 msgid "24 hour"
-msgstr "24 horas"
+msgstr "۲۴ ساعتی"
 
 #: plugins/clock/clock.c:432
 msgid "12 hour"
-msgstr "12 horas"
+msgstr "۱۲ ساعتی"
 
 #: plugins/clock/clock.c:438
 msgid "AM/PM"
-msgstr "AM/PM"
+msgstr "ق‌ظ/ب‌ظ"
 
 #: plugins/clock/clock.c:476
 msgid "Show seconds:"
-msgstr "Mostrar segundos:"
+msgstr "نشان دادن ثانیه‌ها:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "Reloj de XFce"
+msgstr "ساعت XFce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
-msgstr "Paginador gráfico"
+msgstr "صفحه‌نمای گرافیکی"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
-msgstr "Cambiador de escritorio"
+msgstr "عوض کننده‌ی رومیزی"
 
 #: plugins/systembuttons/systembuttons.c:60
 msgid ""
@@ -414,184 +413,71 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"El acceso al sistema de configuración está inhabilitado.\n"
+"دستیابی به سیستم تنظیم از کار انداخته شده است.\n"
 "\n"
-"Para más información consulte con su administrador de sistemas"
+"برای اطلاعات بیشتر از مدیر سیستم خود سؤال کنید"
 
 #: plugins/systembuttons/systembuttons.c:148
 msgid "Lock the screen"
-msgstr "Bloquear la pantalla"
+msgstr "قفل کردن صفحه"
 
 #: plugins/systembuttons/systembuttons.c:149
 #: plugins/systembuttons/systembuttons.c:518
 msgid "Exit"
-msgstr "Salir"
+msgstr "خروج"
 
 #: plugins/systembuttons/systembuttons.c:150
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Setup"
-msgstr "Configuración"
+msgstr "برپاسازی"
 
 #: plugins/systembuttons/systembuttons.c:151
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Info"
-msgstr "Información"
+msgstr "اطلاعات"
 
 #: plugins/systembuttons/systembuttons.c:500
 msgid "Show two buttons:"
-msgstr "Mostrar dos botones"
+msgstr "نشان دادن دو دکمه:"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
 msgid "Lock"
-msgstr "Bloquear"
+msgstr "قفل کردن"
 
 #: plugins/systembuttons/systembuttons.c:549
 msgid "Button 1:"
-msgstr "Botón 1:"
+msgstr "دکمه‌ی ۱:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "Botón 2:"
+msgstr "دکمه ۲:"
 
 #: plugins/systembuttons/systembuttons.c:600
 msgid "System buttons"
-msgstr "Botones de sistema"
+msgstr "دکمه‌های سیستم"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
-msgstr "Separador"
+msgstr "جداساز"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
-msgstr "Buzón de correo:"
+msgstr "جعبه‌ی پست:"
 
 #: plugins/mailcheck/mailcheck.c:623
 msgid "Mail command:"
-msgstr "Programa de correo:"
+msgstr "فرمان پست:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Comando a ejecutar cuando se pinche en el botón del panel"
+msgstr "فرمان برای اجرا وقتی که دکمه‌ی بر روی تابلو کلیک شده باشد"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
-msgstr "Intervalo (seg):"
+msgstr "بازه (ثانیه)"
 
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
-msgstr "Revisar correo"
+msgstr "بررسی پست"
 
-#~ msgid "Sunday"
-#~ msgstr "Domingo"
-
-#~ msgid "Monday"
-#~ msgstr "Lunes"
-
-#~ msgid "Tuesday"
-#~ msgstr "Martes"
-
-#~ msgid "Wednesday"
-#~ msgstr "Miércoles"
-
-#~ msgid "Thursday"
-#~ msgstr "Jueves"
-
-#~ msgid "Friday"
-#~ msgstr "Viernes"
-
-#~ msgid "Saturday"
-#~ msgstr "Sábado"
-
-#~ msgid "January"
-#~ msgstr "Enero"
-
-#~ msgid "February"
-#~ msgstr "Febrero"
-
-#~ msgid "March"
-#~ msgstr "Marzo"
-
-#~ msgid "April"
-#~ msgstr "Abril"
-
-#~ msgid "May"
-#~ msgstr "Mayo"
-
-#~ msgid "June"
-#~ msgstr "Junio"
-
-#~ msgid "July"
-#~ msgstr "Julio"
-
-#~ msgid "August"
-#~ msgstr "Agosto"
-
-#~ msgid "September"
-#~ msgstr "Septiembre"
-
-#~ msgid "October"
-#~ msgstr "Octubre"
-
-#~ msgid "November"
-#~ msgstr "Noviembre"
-
-#~ msgid "December"
-#~ msgstr "Diciembre"
-
-#~ msgid "_Done"
-#~ msgstr "Termina_Do"
-
-#~ msgid "Type:"
-#~ msgstr "Tipo:"
-
-#~ msgid "Add item"
-#~ msgstr "Añladir nuevo elemento"
-
-#~ msgid "XFce Desktop Environment"
-#~ msgstr "Entorno de Escritorio XFce"
-
-#~ msgid "Copyright 2002-2003 by Olivier Fourdan"
-#~ msgstr "Copyright 2002-2003, Olivier Fourdan"
-
-#~ msgid "Credits"
-#~ msgstr "Créditos"
-
-#~ msgid "License"
-#~ msgstr "Licencia"
-
-#~ msgid "/_Panel settings"
-#~ msgstr "/Configuración del _Panel"
-
-#~ msgid "Trashcan: 0 files"
-#~ msgstr "Cubo de basura: 0 archivos"
-
-#~ msgid "Trashcan: %d files / %d %s"
-#~ msgstr "Cubo de basura: %d archivos / %d %s"
-
-#~ msgid "Trash can"
-#~ msgstr "Cubo de basura"
-
-#~ msgid "XFce 4"
-#~ msgstr "XFce 4"
-
-#~ msgid "By Olivier Fourdan (c) 1997-2003"
-#~ msgstr "Por Olivier Fourdan (c) 1997-2003"
-
-#~ msgid "Toggle AM PM mode :"
-#~ msgstr "Intercambiar modo AM PM"
-
-#~ msgid "/_Edit ..."
-#~ msgstr "/_Editar ..."
-
-#~ msgid "Traditional"
-#~ msgstr "Tradicional"
-
-#~ msgid "Modern"
-#~ msgstr "Moderno"
-
-#~ msgid "Panel style:"
-#~ msgstr "Estilo del panel"
-
-#~ msgid "Show minibuttons"
-#~ msgstr "Mostrar minibotones"
