--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,32 +1,31 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <edscott@imp.mx>, 2003.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: xfce4-panel\n"
 "POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: 2004-01-13 00:00+0100\n"
-"Last-Translator: Jaime Buffery <nestu@lunar-linux.org>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2004-01-18 12:26-0200\n"
+"Last-Translator: Felix da Silva Costa <felix@online.eti.br>\n"
+"Language-Team: pt_BR <felix@online.eti.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: panel/xfce_support.c:597
 msgid "Select file"
-msgstr "Seleccionar archivo"
+msgstr "Selecionar arquivo"
 
 #: panel/controls_dialog.c:254
 msgid "Change item"
-msgstr "Cambiar elemento"
+msgstr "Mudar item"
 
 #: panel/controls_dialog.c:286 panel/item_dialog.c:681
 msgid "Position:"
-msgstr "Posición"
+msgstr "Posição:"
 
 #: panel/controls_dialog.c:342 panel/controls.c:272
 msgid ""
@@ -34,25 +33,25 @@ msgid ""
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Quitar un elemento también quitará su menú emergente.\n"
+"Remover um item também remove o menu popup.\n"
 "\n"
-"Desea quitar el elemento?"
+"Você deseja remover este item?"
 
 #: panel/item_dialog.c:321
 msgid "Other Icon"
-msgstr "Otro Icono"
+msgstr "Outro ícone"
 
 #: panel/item_dialog.c:346
 msgid "Select icon"
-msgstr "Seleccionar icono"
+msgstr "Selecionar ícone"
 
 #: panel/item_dialog.c:396
 msgid "Icon:"
-msgstr "Icono:"
+msgstr "Ícone:"
 
 #: panel/item_dialog.c:467
 msgid "Select command"
-msgstr "Seleccionar comando"
+msgstr "Selecionar comando"
 
 #: panel/item_dialog.c:495
 msgid "Command:"
@@ -60,64 +59,64 @@ msgstr "Comando:"
 
 #: panel/item_dialog.c:532 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
-msgstr "Ejecutar en _terminal"
+msgstr "Executar em _terminal"
 
 #: panel/item_dialog.c:537 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr "Usar notificación de arranque"
+msgstr "Use _notificação na inicialização"
 
 #: panel/item_dialog.c:564
 msgid "Caption:"
-msgstr "Captura"
+msgstr "Etiqueta:"
 
 #: panel/item_dialog.c:597
 msgid "Tooltip:"
-msgstr "Etiqueta explicativa"
+msgstr "Dicas:"
 
 #: panel/item_dialog.c:633
 msgid "Menu:"
-msgstr "Menú:"
+msgstr "Menu:"
 
 #: panel/item_dialog.c:640
 msgid "Attach menu to launcher"
-msgstr "Anexarle un menú al lanzador"
+msgstr ""
 
 #: panel/item_dialog.c:773
 msgid "Icon Preview"
-msgstr "Vista preliminar del icono"
+msgstr "Visualização do ícone"
 
 #: panel/item_dialog.c:777
 msgid "Drag file onto this frame to change the icon"
-msgstr "Arrastre el fichero a este marco para cambiar el icono"
+msgstr "Arraste o arquivo até este frame para alterar o ícone"
 
 #: panel/item_dialog.c:965
 msgid "Change menu item"
-msgstr "Cambiar elemento del menú"
+msgstr "Mudar item do menu"
 
 #. add buttons
 #: panel/item_dialog.c:968
 msgid "Remove"
-msgstr "Borrar"
+msgstr "Remover"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "Pinche el botón 3 del ratón para cambiar elemento"
+msgstr "Clique o botão 3 para mudar o item"
 
 #: panel/item.c:464
 msgid "Add launcher"
-msgstr "Añadir lanzador"
+msgstr "Adicionar lançador"
 
 #: panel/item.c:469
 msgid "Add new item"
-msgstr "Añadir nuevo elemento"
+msgstr "Adicionar novo item"
 
 #: panel/item.c:601
 msgid "Launcher"
-msgstr "Lanzador"
+msgstr "Lançador"
 
 #: panel/main.c:117
 msgid "Are you sure you want to exit?"
-msgstr "¿Está seguro de querer salir?"
+msgstr "Tem certeza que deseja sair?"
 
 #: panel/main.c:329
 #, c-format
@@ -126,8 +125,8 @@ msgid ""
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
-"%s, versión %s\n"
-"Parte del Entorno de Escritorio XFce\n"
+"%s, versão %s\n"
+"Parte do Ambiente Desktop XFce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
@@ -136,63 +135,62 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Su gestor de ventanas no parece que soporte las nuevas funcionalidades como "
-"se definen en http://www.freedesktop.org. \n"
-"Algunas características puede que no funcionen adecuadamente."
+"Seu gerenciador de janelas parece não suportar as novas definições de dicas como\n"
+"definidas em http://www.freedesktop.org.\n"
+"Algumas características do XFce podem não funcionar com pretendido."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
-msgstr "/Añadir nuevo elemento"
+msgstr "/Adicionar _novo item"
 
 #: panel/controls.c:322 panel/panel.c:414
 msgid "/_Properties..."
-msgstr "/_Propiedades..."
+msgstr "/_Propriedaddes..."
 
 #: panel/controls.c:323
 msgid "/_Remove"
-msgstr "/_Borrar"
+msgstr "/_Remover"
 
 #: panel/controls.c:655
 msgid "This item has no configuration options"
-msgstr "Este elemento no tiene opciones de configuración"
+msgstr "Este item não possui opções de configuração"
 
 #: panel/panel.c:410
 msgid "/XFce Panel"
-msgstr "/Panel XFce"
+msgstr "/Painel XFce"
 
 #: panel/panel.c:415
 msgid "/_About XFce"
-msgstr "/_Acerca de XFce"
+msgstr "/_Sobre XFce"
 
 #: panel/panel.c:416
 msgid "/_Help"
-msgstr "/Ayuda"
+msgstr "/_Ajuda"
 
 #: panel/panel.c:419
 msgid "/_Settings manager"
-msgstr "/Administrador de configuración"
+msgstr "/Gerenciador de _Configurações"
 
 #: panel/panel.c:422
 msgid "/_Lock screen"
-msgstr "/B_Loquear pantalla"
+msgstr "/_Travar tela"
 
 #: panel/panel.c:423
-#, fuzzy
 msgid "/_Restart"
-msgstr "_Deshacer"
+msgstr "/_Reiniciar"
 
 #: panel/panel.c:425
 msgid "/E_xit"
-msgstr "/Salir"
+msgstr "/Sai_r"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
 msgid "XFce Panel"
-msgstr "Panel XFce"
+msgstr "Painel XFce"
 
 #: panel/icons.c:73
 msgid "Default"
-msgstr "Por defecto"
+msgstr "Padrão"
 
 #: panel/icons.c:74
 msgid "Editor"
@@ -200,27 +198,27 @@ msgstr "Editor"
 
 #: panel/icons.c:75
 msgid "File management"
-msgstr "Administración de archivos"
+msgstr "Gerenciamento de arquivos"
 
 #: panel/icons.c:76
 msgid "Utilities"
-msgstr "Utilidades"
+msgstr "Utilitários"
 
 #: panel/icons.c:77
 msgid "Games"
-msgstr "Juegos"
+msgstr "Jogos"
 
 #: panel/icons.c:78
 msgid "Help browser"
-msgstr "Navegador de ayuda"
+msgstr ""
 
 #: panel/icons.c:79
 msgid "Multimedia"
-msgstr "Multimedia"
+msgstr "Multimidia"
 
 #: panel/icons.c:80
 msgid "Network"
-msgstr "Red"
+msgstr "Rede"
 
 #: panel/icons.c:81
 msgid "Graphics"
@@ -228,15 +226,15 @@ msgstr "Gráficos"
 
 #: panel/icons.c:82
 msgid "Printer"
-msgstr "Impresora"
+msgstr "Impressora"
 
 #: panel/icons.c:83
 msgid "Productivity"
-msgstr "Productividad"
+msgstr "Produtividade"
 
 #: panel/icons.c:84
 msgid "Sound"
-msgstr "Sonido"
+msgstr "Som"
 
 #: panel/icons.c:85
 msgid "Terminal"
@@ -244,23 +242,23 @@ msgstr "Terminal"
 
 #: panel/mcs_client.c:208
 msgid "Settings manager not available"
-msgstr "Administrador de sesión no está disponible"
+msgstr "Gerenciador de configurações não disponível"
 
 #: panel/popup.c:261
 msgid "Menu"
-msgstr "Menú"
+msgstr "Menu"
 
 #: settings/xfce_settings_dialog.c:119
 msgid "Tiny"
-msgstr "Pequeñito"
+msgstr "Muito pequeno"
 
 #: settings/xfce_settings_dialog.c:123
 msgid "Small"
-msgstr "Pequeño"
+msgstr "Pequeno"
 
 #: settings/xfce_settings_dialog.c:127
 msgid "Medium"
-msgstr "Mediano"
+msgstr "Médio"
 
 #: settings/xfce_settings_dialog.c:131
 msgid "Large"
@@ -276,41 +274,41 @@ msgstr "Vertical"
 
 #: settings/xfce_settings_dialog.c:226 settings/xfce_settings_dialog.c:456
 msgid "Left"
-msgstr "Izquierda"
+msgstr "Esquerdo"
 
 #: settings/xfce_settings_dialog.c:230 settings/xfce_settings_dialog.c:457
 msgid "Right"
-msgstr "Derecha"
+msgstr "Direito"
 
 #: settings/xfce_settings_dialog.c:234 settings/xfce_settings_dialog.c:455
 #: settings/xfce_settings_dialog.c:511
 msgid "Top"
-msgstr "Arriba"
+msgstr "Topo"
 
 #: settings/xfce_settings_dialog.c:238 settings/xfce_settings_dialog.c:454
 #: settings/xfce_settings_dialog.c:519
 msgid "Bottom"
-msgstr "Abajo"
+msgstr "Abaixo"
 
 #: settings/xfce_settings_dialog.c:374
 msgid "Panel size:"
-msgstr "Tamaño del panel:"
+msgstr "Tamanho do painel:"
 
 #: settings/xfce_settings_dialog.c:390
 msgid "Panel orientation:"
-msgstr "Orientación del panel:"
+msgstr "Orientação do painel:"
 
 #: settings/xfce_settings_dialog.c:407
 msgid "Popup position:"
-msgstr "Posición del menú emergente:"
+msgstr "Posição do Popup:"
 
 #: settings/xfce_settings_dialog.c:424
 msgid "Icon theme:"
-msgstr "Tema de los iconos:"
+msgstr "Tema dos ícones:"
 
 #: settings/xfce_settings_dialog.c:495
 msgid "Panel layer:"
-msgstr "Nivel del panel:"
+msgstr ""
 
 #: settings/xfce_settings_dialog.c:515
 msgid "Normal"
@@ -318,34 +316,34 @@ msgstr "Normal"
 
 #: settings/xfce_settings_dialog.c:535
 msgid "Center the panel:"
-msgstr "Centrar el panel:"
+msgstr "Centralizar painel:"
 
 #: settings/xfce_settings_dialog.c:559
 msgid "Set"
-msgstr "Configurar"
+msgstr "Aplicar"
 
 #: settings/xfce_settings_dialog.c:595
 msgid "Autohide:"
-msgstr "Ocultar automáticamente"
+msgstr "Auto-Ocultar:"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
-msgstr "Configuración del panel de XFce"
+msgstr "Configurações do painel do XFce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
 msgid "Appearance"
-msgstr "Apariencia"
+msgstr "Aparência"
 
 #. Position
 #: settings/xfce_settings_dialog.c:696
 msgid "Position"
-msgstr "Posición"
+msgstr "Posição"
 
 #. autohide
 #: settings/xfce_settings_dialog.c:712
 msgid "Behaviour"
-msgstr "Comportamiento"
+msgstr "Comportamento"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -357,11 +355,11 @@ msgstr "Comportamiento"
 #.
 #: plugins/clock/clock.c:119
 msgid "%A, %-d %B %Y"
-msgstr ""
+msgstr "%A, %-d %B %Y"
 
 #: plugins/clock/clock.c:336
 msgid "Clock type:"
-msgstr "Tipo de reloj:"
+msgstr "Tipo de relógio:"
 
 #: plugins/clock/clock.c:349
 msgid "Analog"
@@ -377,10 +375,9 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:419
 msgid "Hour mode:"
-msgstr "Modo Horario"
+msgstr "Modo de horas:"
 
 #: plugins/clock/clock.c:426
-#, fuzzy
 msgid "24 hour"
 msgstr "24 horas"
 
@@ -398,7 +395,7 @@ msgstr "Mostrar segundos:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "Reloj de XFce"
+msgstr "Relógio XFce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
@@ -406,7 +403,7 @@ msgstr "Paginador gráfico"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
-msgstr "Cambiador de escritorio"
+msgstr "Alternador de desktop"
 
 #: plugins/systembuttons/systembuttons.c:60
 msgid ""
@@ -414,49 +411,49 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"El acceso al sistema de configuración está inhabilitado.\n"
+"Acesso a configuração do sistema foi desabilitado.\n"
 "\n"
-"Para más información consulte con su administrador de sistemas"
+"Pergunte ao administrador do sistema para mais informações"
 
 #: plugins/systembuttons/systembuttons.c:148
 msgid "Lock the screen"
-msgstr "Bloquear la pantalla"
+msgstr "Travar a tela"
 
 #: plugins/systembuttons/systembuttons.c:149
 #: plugins/systembuttons/systembuttons.c:518
 msgid "Exit"
-msgstr "Salir"
+msgstr "Sair"
 
 #: plugins/systembuttons/systembuttons.c:150
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Setup"
-msgstr "Configuración"
+msgstr "Configurar"
 
 #: plugins/systembuttons/systembuttons.c:151
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Info"
-msgstr "Información"
+msgstr "Informações"
 
 #: plugins/systembuttons/systembuttons.c:500
 msgid "Show two buttons:"
-msgstr "Mostrar dos botones"
+msgstr "Mostrar dois botôes:"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
 msgid "Lock"
-msgstr "Bloquear"
+msgstr "Travar"
 
 #: plugins/systembuttons/systembuttons.c:549
 msgid "Button 1:"
-msgstr "Botón 1:"
+msgstr "Botão 1:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "Botón 2:"
+msgstr "Botão 2:"
 
 #: plugins/systembuttons/systembuttons.c:600
 msgid "System buttons"
-msgstr "Botones de sistema"
+msgstr "Botôes de sistema"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
@@ -464,134 +461,20 @@ msgstr "Separador"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
-msgstr "Buzón de correo:"
+msgstr "Caixa de correio:"
 
 #: plugins/mailcheck/mailcheck.c:623
 msgid "Mail command:"
-msgstr "Programa de correo:"
+msgstr "Comando de e-mail:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Comando a ejecutar cuando se pinche en el botón del panel"
+msgstr "Comando a executar quando o botão no painel for clicado"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
-msgstr "Intervalo (seg):"
+msgstr "Intevalo (segundos):"
 
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
-msgstr "Revisar correo"
-
-#~ msgid "Sunday"
-#~ msgstr "Domingo"
-
-#~ msgid "Monday"
-#~ msgstr "Lunes"
-
-#~ msgid "Tuesday"
-#~ msgstr "Martes"
-
-#~ msgid "Wednesday"
-#~ msgstr "Miércoles"
-
-#~ msgid "Thursday"
-#~ msgstr "Jueves"
-
-#~ msgid "Friday"
-#~ msgstr "Viernes"
-
-#~ msgid "Saturday"
-#~ msgstr "Sábado"
-
-#~ msgid "January"
-#~ msgstr "Enero"
-
-#~ msgid "February"
-#~ msgstr "Febrero"
-
-#~ msgid "March"
-#~ msgstr "Marzo"
-
-#~ msgid "April"
-#~ msgstr "Abril"
-
-#~ msgid "May"
-#~ msgstr "Mayo"
-
-#~ msgid "June"
-#~ msgstr "Junio"
-
-#~ msgid "July"
-#~ msgstr "Julio"
-
-#~ msgid "August"
-#~ msgstr "Agosto"
-
-#~ msgid "September"
-#~ msgstr "Septiembre"
-
-#~ msgid "October"
-#~ msgstr "Octubre"
-
-#~ msgid "November"
-#~ msgstr "Noviembre"
-
-#~ msgid "December"
-#~ msgstr "Diciembre"
-
-#~ msgid "_Done"
-#~ msgstr "Termina_Do"
-
-#~ msgid "Type:"
-#~ msgstr "Tipo:"
-
-#~ msgid "Add item"
-#~ msgstr "Añladir nuevo elemento"
-
-#~ msgid "XFce Desktop Environment"
-#~ msgstr "Entorno de Escritorio XFce"
-
-#~ msgid "Copyright 2002-2003 by Olivier Fourdan"
-#~ msgstr "Copyright 2002-2003, Olivier Fourdan"
-
-#~ msgid "Credits"
-#~ msgstr "Créditos"
-
-#~ msgid "License"
-#~ msgstr "Licencia"
-
-#~ msgid "/_Panel settings"
-#~ msgstr "/Configuración del _Panel"
-
-#~ msgid "Trashcan: 0 files"
-#~ msgstr "Cubo de basura: 0 archivos"
-
-#~ msgid "Trashcan: %d files / %d %s"
-#~ msgstr "Cubo de basura: %d archivos / %d %s"
-
-#~ msgid "Trash can"
-#~ msgstr "Cubo de basura"
-
-#~ msgid "XFce 4"
-#~ msgstr "XFce 4"
-
-#~ msgid "By Olivier Fourdan (c) 1997-2003"
-#~ msgstr "Por Olivier Fourdan (c) 1997-2003"
-
-#~ msgid "Toggle AM PM mode :"
-#~ msgstr "Intercambiar modo AM PM"
-
-#~ msgid "/_Edit ..."
-#~ msgstr "/_Editar ..."
-
-#~ msgid "Traditional"
-#~ msgstr "Tradicional"
-
-#~ msgid "Modern"
-#~ msgstr "Moderno"
-
-#~ msgid "Panel style:"
-#~ msgstr "Estilo del panel"
-
-#~ msgid "Show minibuttons"
-#~ msgstr "Mostrar minibotones"
+msgstr "Checar E-mail"
