--- a/po/ja.po
+++ b/po/ja.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: 2003-05-27 12:30+0900\n"
+"PO-Revision-Date: 2003-12-09 17:30+0900\n"
 "Last-Translator: Zhao Ji <zhao-ji@awz.ne.jp>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -126,6 +126,8 @@ msgid ""
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
+"XFceデスクトップ環境部品\n"
+"http://www.xfce.org\n"
 
 #: panel/main.c:361
 msgid ""
@@ -155,7 +157,7 @@ msgstr "この項目に、オプション設定は存在しません"
 
 #: panel/panel.c:410
 msgid "/XFce Panel"
-msgstr ""
+msgstr "/XFceパネル"
 
 #: panel/panel.c:415
 msgid "/_About XFce"
@@ -295,7 +297,7 @@ msgstr "パネル サイズ:"
 
 #: settings/xfce_settings_dialog.c:390
 msgid "Panel orientation:"
-msgstr ""
+msgstr "パネル方向"
 
 #: settings/xfce_settings_dialog.c:407
 msgid "Popup position:"
@@ -323,7 +325,7 @@ msgstr "セット"
 
 #: settings/xfce_settings_dialog.c:595
 msgid "Autohide:"
-msgstr ""
+msgstr "自動で隠す"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
@@ -342,7 +344,7 @@ msgstr "位置"
 #. autohide
 #: settings/xfce_settings_dialog.c:712
 msgid "Behaviour"
-msgstr ""
+msgstr "動き"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -354,7 +356,7 @@ msgstr ""
 #.
 #: plugins/clock/clock.c:119
 msgid "%A, %-d %B %Y"
-msgstr ""
+msgstr "%Y-%B-%-d(%A)"
 
 #: plugins/clock/clock.c:336
 msgid "Clock type:"
@@ -435,7 +437,7 @@ msgstr "お知らせ"
 
 #: plugins/systembuttons/systembuttons.c:500
 msgid "Show two buttons:"
-msgstr ""
+msgstr "２つボタンを表示"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
@@ -456,7 +458,7 @@ msgstr "システム・ボタン"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
-msgstr ""
+msgstr "区切り"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
