Update Persian translations
(Old svn revision: 3965)

--- a/po/fa_IR.po
+++ b/po/fa_IR.po
@@ -1,15 +1,16 @@
+# translation of fa_IR.po to Persian
 # translation of xfce4-panel.po to Persian
 # Persian translation of PACKAGE.
 # Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Abbas Izad <abbasizad@hotmail.com>, 2003.
+# Abbas Izad <abbasizad@hotmail.com>, 2003, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: fa_IR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: 2003-12-26 17:56+0330\n"
+"PO-Revision-Date: 2004-02-22 21:37+0330\n"
 "Last-Translator: Abbas Izad <abbasizad@hotmail.com>\n"
 "Language-Team: Persian <fa@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -61,11 +62,11 @@ msgstr "فرمان:"
 
 #: panel/item_dialog.c:532 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
-msgstr "اجرا شدن در _پایانه"
+msgstr "اجرا کردن در _پایانه"
 
 #: panel/item_dialog.c:537 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr "استفاده کردن از یادآوری ـ‌آغازین"
+msgstr "استفاده کردن از یادآوری _آغازین"
 
 #: panel/item_dialog.c:564
 msgid "Caption:"
@@ -143,15 +144,15 @@ msgstr ""
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
-msgstr "/افزودن آیتم ـجدید"
+msgstr "/افزودن آیتم _جدید"
 
 #: panel/controls.c:322 panel/panel.c:414
 msgid "/_Properties..."
-msgstr "/ـ‌مشخصات..."
+msgstr "/_مشخصات..."
 
 #: panel/controls.c:323
 msgid "/_Remove"
-msgstr "/ـ‌برداشتن"
+msgstr "/_برداشتن"
 
 #: panel/controls.c:655
 msgid "This item has no configuration options"
@@ -163,27 +164,27 @@ msgstr "/تابلوی XFce"
 
 #: panel/panel.c:415
 msgid "/_About XFce"
-msgstr "/ـ‌درباره‌ی XFce"
+msgstr "/_درباره‌ی XFce"
 
 #: panel/panel.c:416
 msgid "/_Help"
-msgstr "/ـراهنما"
+msgstr "/_راهنما"
 
 #: panel/panel.c:419
 msgid "/_Settings manager"
-msgstr "/ـ‌مدیر تنظیمات"
+msgstr "/_مدیر تنظیمات"
 
 #: panel/panel.c:422
 msgid "/_Lock screen"
-msgstr "/ـ‌قفل کردن صفحه"
+msgstr "/_قفل کردن صفحه"
 
 #: panel/panel.c:423
 msgid "/_Restart"
-msgstr "/ـراه‌اندازی مجدد"
+msgstr "/_راه‌اندازی مجدد"
 
 #: panel/panel.c:425
 msgid "/E_xit"
-msgstr "/ـ‌خروج"
+msgstr "/_خروج"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
