Panel positioning and popup arrow direction backport from development version
(Old svn revision: 3977)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+* 2004-02-26  Jasper Huijsmans <jasper@xfce.org>
+
+Backport features from development version: 
+- repositioning when the panel size changes and keep inside the screen.
+- Properly update arrow direction on popup buttons.
+
+* 2003-11-05  Jasper Huijsmans <jasper@xfce.org>
+
+Make SIGUSR2 quit with confirmation.
+
+* 2003-10-23  Jasper Huijsmans <jasper@xfce.org>
+
+Make SIGUSR1 really start a new instance of the panel. Fixes new plugin
+installation bug.
+
 * 2003-07-25  Jasper Huijsmans <huysmans@users.sourceforge.net>
 
 Improved autohide handling and reorientation.
